; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/kmtests/ntos_fsrtl/extr_FsRtlTunnel.c_TestFsRtlFindInTunnelCache.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/kmtests/ntos_fsrtl/extr_FsRtlTunnel.c_TestFsRtlFindInTunnelCache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BufSize = common dso_local global i32 0, align 4
@PagedPool = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [63 x i8] c"Buff in FsRtlFindInTunnelCache is NULL after allocated memory\0A\00", align 1
@T = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TestFsRtlFindInTunnelCache(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @BufSize, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* @PagedPool, align 4
  %13 = load i32, i32* @BufSize, align 4
  %14 = mul nsw i32 %13, 2
  %15 = call i32* @ExAllocatePool(i32 %12, i32 %14)
  store i32* %15, i32** %10, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = icmp ne i32* %16, null
  %18 = zext i1 %17 to i32
  %19 = call i32 @ok(i32 %18, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str, i64 0, i64 0))
  %20 = load i32, i32* @T, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @FsRtlFindInTunnelCache(i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, i32* %9, i32* %25)
  ret i32 %26
}

declare dso_local i32* @ExAllocatePool(i32, i32) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @FsRtlFindInTunnelCache(i32, i32, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
